k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ml-portfolio
  labels:
    name: ml-portfolio
    env: production
    owner: duqueom
